crates/rome_js_formatter/tests/specs/prettier/typescript/compiler/downlevelLetConst1.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
const```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1 @@
-const;
+const
```

# Output

```js
const
```


# Errors
```
error[SyntaxError]: expected an identifier, an array pattern, or an object pattern but instead found ''
  ┌─ downlevelLetConst1.ts:1:6
  │
1 │ const
  │      ^ Expected an identifier, an array pattern, or an object pattern here


```


